# podcast-ad-remover

./: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  config.toml.example  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-03-25-podcast-ad-remover.md
src/podcast_ad_remover/: __main__.py  ad_detector.py  audio_processor.py  audiobookshelf.py  config.py  downloader.py  feed.py  metadata.py  models.py  pipeline.py  scheduler.py  state.py
tests/: conftest.py  test_ad_detector.py  test_audio_processor.py  test_audiobookshelf.py  test_config.py  test_downloader.py  test_feed.py  test_metadata.py  test_models.py  test_pipeline.py  test_scheduler.py  test_state.py
