[project]
name = "podcast-ad-remover"
version = "0.1.0"
description = "Remove ads from podcast episodes and upload to Audiobookshelf"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.28",
    "pydub>=0.25",
    "mutagen>=1.47",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "audioop-lts>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_ad_remover"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
exclude-newer = "3 days"